src/objects/Ad_hoc_Revenue__c.object
<CustomObject>
    <description>Custom Object to capture ad-hoc revenue that does not require a contract</description>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Ad-hoc Revenue</relationshipLabel>
        <relationshipName>Ad_hoc_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GBP</fullName>
                    <default>true</default>
                    <label>GBP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ad-hoc Revenue</relationshipLabel>
        <relationshipName>Ad_hoc_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <label>Customer Reference</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <label>Invoice Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Validation_Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Validation Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <description>FinancialForce Company Name</description>
        <label>Legal Entity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Ad-hoc Revenue</relationshipLabel>
        <relationshipName>Ad_hoc_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Ad-hoc Revenue</relationshipLabel>
        <relationshipName>Ad_hoc_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Property__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Credit_Note_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Credit Note Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Credit_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Ad-hoc Revenue</relationshipLabel>
        <relationshipName>Ad_hoc_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Ad-hoc Revenue</relationshipLabel>
        <relationshipName>Ad_hoc_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Ad-hoc Revenue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AdRev{00000000}</displayFormat>
        <label>Ad-hoc Revenue Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad-hoc Revenue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mandatory_Currency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISPICKVAL(Currency__c, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Currency__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Customer_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(Customer_Account__c)
)</errorConditionFormula>
        <errorDisplayField>Customer_Account__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Customer_Reference</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(Customer_Reference__c)
)</errorConditionFormula>
        <errorDisplayField>Customer_Reference__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Document_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISPICKVAL(Document_Type__c, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Document_Type__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Due_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(Due_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_From_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(From_Date__c)
)</errorConditionFormula>
        <errorDisplayField>From_Date__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Invoice_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(Invoice_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Invoice_Date__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Invoice_Description</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(Invoice_Description__c)
)</errorConditionFormula>
        <errorDisplayField>Invoice_Description__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Legal_Entity</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(Legal_Entity__c)
)</errorConditionFormula>
        <errorDisplayField>Legal_Entity__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Period</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(Period__c)
)</errorConditionFormula>
        <errorDisplayField>Period__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Product</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(Product__c)
)</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Property</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(Property__c)
)</errorConditionFormula>
        <errorDisplayField>Property__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(Quantity__c)
)</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Tax_Code</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(Tax_Code__c)
)</errorConditionFormula>
        <errorDisplayField>Tax_Code__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_To_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(To_Date__c)
)</errorConditionFormula>
        <errorDisplayField>To_Date__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Unit_Price</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Validation_Enable__c,
    ISBLANK(Unit_Price__c)
)</errorConditionFormula>
        <errorDisplayField>Unit_Price__c</errorDisplayField>
        <errorMessage>Must be Populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_Value_must_be_one_or_higher</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Value must be one or higher</errorMessage>
    </validationRules>
</CustomObject>